--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Basic Webpage</title>
 </head>
 <body>
-    <h1>Hello, Worlds!</h1>
+    <h1>Hello, World amantha</h1>
     <p>commited!!!!!! haha</p>
 </body>
 </html>
