--- a/index.html
+++ b/index.html
@@ -2,10 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Basic Webpage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Simple Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        main {
+            padding: 20px;
+            text-align: center;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, World amantha</h1>
-    <p>commited!!!!!! haha</p>
+    <header>
+        <h1>Welcome to My Simple Page</h1>
+    </header>
+    <main>
+        <p>This is a basic HTML page with some simple styling.</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 My Simple Page</p>
+    </footer>
 </body>
 </html>
