--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>This is a basic HTML page with some simple styling.</p>
     </main>
     <footer>
-        <p>&copy; 2024 My Simple Page - s3 copy </p>
+        <p>&copy; 2024 My Simple Page - final one </p>
     </footer>
 </body>
 </html>
