--- a/index.html
+++ b/index.html
@@ -3,41 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Page</title>
+    <title>Attractive Landing Page</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
+            font-family: Arial, sans-serif;
+            color: #333;
+            line-height: 1.6;
             background-color: #f4f4f4;
         }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 10px 0;
+        .header {
+            background: #333;
+            color: #fff;
+            padding: 20px 0;
             text-align: center;
         }
-        main {
+        .header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        .hero {
+            background: url('https://via.placeholder.com/1920x1080') no-repeat center center/cover;
+            color: #fff;
+            text-align: center;
+            padding: 100px 20px;
+        }
+        .hero h2 {
+            font-size: 3em;
+            margin: 0;
+        }
+        .hero p {
+            font-size: 1.2em;
+        }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 1em;
+            color: #fff;
+            background: #f47c20;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .button:hover {
+            background: #e36c1f;
+        }
+        .content {
             padding: 20px;
-            text-align: center;
+            max-width: 1200px;
+            margin: auto;
         }
-        footer {
-            background-color: #333;
-            color: white;
+        .section {
+            background: #fff;
+            margin-bottom: 20px;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .section h2 {
+            margin-top: 0;
+        }
+        .footer {
+            background: #333;
+            color: #fff;
             padding: 10px 0;
             text-align: center;
+        }
+        @media (max-width: 768px) {
+            .hero h2 {
+                font-size: 2em;
+            }
+            .hero p {
+                font-size: 1em;
+            }
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Simple Page</h1>
+    <header class="header">
+        <h1>My Awesome Website</h1>
     </header>
-    <main>
-        <p>This is a basic HTML page with some simple styling.</p>
-    </main>
-    <footer>
-        <p>&copy; 2024 My Simple Page - final one </p>
+
+    <section class="hero">
+        <h2>Welcome to Our Site!</h2>
+        <p>Your journey to greatness begins here.</p>
+        <a href="#content" class="button">Get Started</a>
+    </section>
+
+    <div id="content" class="content">
+        <div class="section">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum.</p>
+        </div>
+        <div class="section">
+            <h2>Our Services</h2>
+            <p>Nullam vehicula, ligula id facilisis vehicula, ex urna dictum urna, a euismod augue augue eu lectus.</p>
+        </div>
+        <div class="section">
+            <h2>Contact Us</h2>
+            <p>Phasellus varius dui eu urna ultrices, a iaculis augue dignissim. Cras quis nibh in urna blandit tincidunt.</p>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <p>&copy; 2024 My Awesome Website. All rights reserved.</p>
     </footer>
 </body>
 </html>
