chamged index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>My Awesome Website</h1>
+        <h1>AMANTHA</h1>
     </header>
 
     <section class="hero">
