--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
 
     <footer class="footer">
-        <p>&copy; 2024 My Awesome Website. All rights reserved.</p>
+        <p>&copy; 2024 My Awesome Website. All rights reserved!</p>
     </footer>
 </body>
 </html>
